<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group  android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/main_activity"
            android:icon="@drawable/ic_smartphone_black_12dp"
            android:title="@string/main_screnn_menu" />
        <item
            android:id="@+id/show_data"
            android:icon="@drawable/ic_format_list_bulleted_black_12dp"
            android:title="@string/show_data_menu" />
        <item
            android:id="@+id/add_category"
            android:icon="@drawable/ic_add_circle_outline_black_12dp"
            android:title="@string/add_category_menu" />
        <item
            android:id="@+id/delete_category"
            android:icon="@drawable/ic_remove_circle_outline_black_12dp"
            android:title="@string/delete_category_menu" />

    </group>

    <group  android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/export_data"
            android:icon="@drawable/ic_file_upload_black_12dp"
            android:title="@string/export_data_menu" />
        <item
                android:id="@+id/clear_data"
                android:icon="@drawable/ic_storage_black_24dp"
                android:title="@string/clear_data_menu" />
    </group>

</menu>
